--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -12,6 +12,9 @@
                 <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Clientes</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'produto:produto_list' %}">Produtos</a>
             </li>
             <li class="nav-item dropdown">
