--- a/projeto/cliente/templates/cliente_detail.html
+++ b/projeto/cliente/templates/cliente_detail.html
@@ -5,7 +5,7 @@
 <a href="{% url 'cliente:cliente_list' %}">Voltar</a>
 <h1>{{ object }}
     <span class="pull-right">
-        <a href="">
+        <a href="{% url 'cliente:cliente_edit' object.pk %}">
             <button type="button" class="btn btn-success">
                 <span class="fa fa-pencil">Editar</span>
             </button>
