--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <style>
-        span.required:after{
+        label.required:after{
             content: "*";
             color: red;
         }
@@ -14,12 +14,14 @@
 {% block content %}
 
 <form method="POST" novalidate>
+
     {% csrf_token %}
+
     <!-- {% for field in form.visible_fields %}
         <div class="form-group{% if field.erros %} has-error {% endif %}">
             <label for="{{ field.id_for_label }}">
                 {% if field.field.required %}
-                    <span class="required">{{ field.label }} </span>
+                    <span class="required"> {{ field.label }} </span>
                 {% else %}
                     {{ field.label }}
                 {% endif %}
@@ -33,8 +35,8 @@
 
     <div class="row">
         <div class="col-sm-4">                    
-            <div class="form-group" >
-                <label for="">{{form.nome.label}}</label>
+            <div class="form-group" >                
+                <label for="" class="required" >{{form.nome.label}} </label>                
                 {% render_field form.nome class="form-control" %}
             </div>
         </div>
@@ -68,7 +70,7 @@
             </div>  
         </div>
 
-        {% if pessoa %}
+        {% if form.visible_fields %}
             <div class="col-sm-2">
                 <div class="form-group">
                     <label for="">{{form.data_nasc.label}}</label>
