--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -12,12 +12,11 @@
             </a>
         </span>
     </h2>
-
     
     {% if object_list %}
     
-        <table class="table striped">
-            <thead>
+        <table class="table table-striped">
+            <thead class="thead">
                 <tr>
                     <th>Nome</th>                    
                     <th>RG</th>
