--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -17,7 +17,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Empréstimos</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'estoque:estoque_entrada_list' %}">Realizar</a>
+                    <a class="dropdown-item" href="{% url 'emprestimo:emprestimo_entrada_list' %}">Realizar</a>
                     <a class="dropdown-item" href="#">Saida</a>                    
                 </div>
             </li>
