emprestimo_entrada_detail.html adicionado/configurado

--- a/projeto/emprestimo/templates/emprestimo_entrada_list.html
+++ b/projeto/emprestimo/templates/emprestimo_entrada_list.html
@@ -37,4 +37,6 @@
     <p class="alert alert-warning">Sem itens na lista.</p>
 {% endif %}
 
+<h4>Aqui são os emprestimos gerais na ordem cronologica</h4>
+
 {% endblock content %}
