--- a/projeto/emprestimo/templates/emprestimo_entrada_list.html
+++ b/projeto/emprestimo/templates/emprestimo_entrada_list.html
@@ -4,7 +4,7 @@
 
 <h2>Lista de emprestimos
     <span class="pull-right">
-        <a href=""> 
+        <a href="{% url 'emprestimo:emprestimo_entrada_add' %}"> 
             <button type="button" class="btn btn-primary">
                 <span class="fa fa-plus">Adicionar</span>
             </button>
