emprestimo_list.html

--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -15,6 +15,9 @@
                 <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Clientes</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'emprestimo:emprestimo_list' %}">Emprestimos</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'produto:produto_list' %}">Produtos</a>
             </li>
             <li class="nav-item dropdown">
