--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -5,7 +5,7 @@
 <div class="class page-header">
     <h2>Lista de Emprestimos
         <span class="pull-right">
-            <a href="">
+            <a href="{% url 'emprestimo:emprestimo_add' %}">
                 <button type="button" class="btn btn-primary">
                     <span class="fa fa-plus"></span>Adicionar
                 </button>
