cliente delete adicionado

--- a/projeto/cliente/templates/cliente_detail.html
+++ b/projeto/cliente/templates/cliente_detail.html
@@ -11,6 +11,13 @@
             </button>
         </a>
     </span>
+    <span class="pull-right">
+        <a href="{% url 'cliente:cliente_delete' object.pk %}">
+            <button type="button" class="btn btn-success">
+                <span class="fa fa-pencil">Deletar</span>
+            </button>
+        </a>
+    </span>
 </h1>
 
 <div class="col-sm-6">
