--- a/projeto/cliente/templates/cliente_delete.html
+++ b/projeto/cliente/templates/cliente_delete.html
@@ -8,8 +8,8 @@
     <div class="col">
         <form method="POST">
             {% csrf_token %}
-            <a href="{% url 'cliente:cliente_list' %}" class="btn btn-primary">Voltar</a>
-            <input type="submit" class="btn btn-danger" value="Deletar">
+            <input type="submit" class="btn btn-danger" value="Sim">
+            <a href="{% url 'cliente:cliente_list' %}" class="btn btn-primary">Não</a>
         </form>
     </div>
 </div>
