--- a/projeto/cliente/templates/cliente_detail.html
+++ b/projeto/cliente/templates/cliente_detail.html
@@ -3,22 +3,13 @@
 {% block content %}
 
 <a href="{% url 'cliente:cliente_list' %}">Voltar</a>
-<h1>{{ object }}
-    <span class="pull-right">
-        <a href="{% url 'cliente:cliente_edit' object.pk %}">
-            <button type="button" class="btn btn-success">
-                <span class="fa fa-pencil">Editar</span>
-            </button>
-        </a>
-    </span>
-    <span class="pull-right">
-        <a href="{% url 'cliente:cliente_delete' object.pk %}">
-            <button type="button" class="btn btn-success">
-                <span class="fa fa-pencil">Deletar</span>
-            </button>
-        </a>
-    </span>
-</h1>
+
+<h1>{{ object }}</h1>
+
+<span class="pull-right">
+    <a href="{% url 'cliente:cliente_list' %}" class="btn btn-primary">Voltar</a>
+    <a href="{% url 'cliente:cliente_delete' object.pk %}" class="btn btn-danger">Deletar</a>
+</span>    
 
 <div class="col-sm-6">
     <table class="table table-user-information">
