--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -10,6 +10,8 @@
                 <span class="fa fa-pencil">Editar</span>
             </button>
         </a>
+        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" class="btn btn-primary">Imprimir</a>
+        
     </span>
 </h1>
 
