--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -3,47 +3,65 @@
 {% block content %}
 
 
-<h1>Impressão do Emprestimo de {{ object.cliente }}
-   
-</h1>
+<h1>Impressão do Emprestimo de {{ object.cliente }}</h1>
 
-<div class="col-sm-6">
-    <table class="table table-user-information">
-        <tbody>
-            <tr>
-                <th class="text-right">funcionario</th>
-                <td>{{ object.funcionario }}</td>
-            </tr>
-            <tr>
-                <th class="text-right">Nº Documento</th>
-                <td>{{ object.num_doc }}</td>
-            </tr>
-            <tr>
-                <th class="text-right">Cliente</th>
-                <td>{{ object.cliente }}</td>
-            </tr>
-            <tr>
-                <th class="text-right">Valor</th>
-                <td>{{ object.valor_emprestado }}</td>
-            </tr>
-            <tr>
-                <th class="text-right">Parcelas</th>
-                <td>{{ object.qtd_parcelas }}</td>
-            </tr>
-            <tr>
-                <th class="text-right">Prestacao</th>
-                <td>{{ object.valor_prestacao }}</td>
-            </tr>
-            
-        </tbody>
-    </table>
+
+
+<input type="button" value="Imprimir" onclick="imprimir()">
+<div id = "carne" class="col-sm-6">
+	carne
 </div>
 
-<table cellspacing="0" border="0">
+{{ object.qtd_parcelas }}
+
+<br>
+
+<!-- <table cellspacing="0" border="0">
 	<colgroup span="6" width="93"></colgroup>
 	<tr>
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" height="19" align="left">ola</td>
+		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="center">{{ object.funcionario }}</td>
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+	</tr>	
+</table> -->
+
+
+
+<!-- var i;
+for (i = 0; i < cars.length; i++) {
+	text += cars[i] + "<br>";
+} -->
+
+
+
+<script>
+	function imprimir(){	
+		for (var i = 0; i < {{ object.qtd_parcelas }}; i++) {
+			carne.innerHTML += 
+			`<table cellspacing="0" border="0">
+				<colgroup span="6" width="93"></colgroup>
+				<tr>
+					<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" height="19" align="left">ola</td>
+					<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="center">{{ object.funcionario }}</td>
+					<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="center">carilho</td>
+					<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+					<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+					<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
+				</tr>	
+			</table><br>`
+			
+		}
+	}
+</script>
+
+<!-- <table cellspacing="0" border="0">
+	<colgroup span="6" width="93"></colgroup>
+	<tr>
+		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" height="19" align="left">ola</td>
+		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="center">{{ object.funcionario }}</td>
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
@@ -81,8 +99,8 @@
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
 		<td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000" align="left"><br></td>
 	</tr>
-</table>
-<!-- ************************************************************************** -->
-</body>
+</table> -->
+
+
 
 {% endblock content %}
