--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -68,7 +68,24 @@
                 {% render_field form.valor_prestacao class="form-control" %}                       
             </div>
         </div>       
+        
+        {% if object.pk %}
+            <div class="col-sm-3"> 
+                <div class="form-group">
+                    <label for="">{{form.data_emprestimo.label}}</label>
+                    {% render_field form.data_emprestimo class="form-control" %}                       
+                </div>
+            </div>       
+        {% else %}
+            <div class="col-sm-3">
+                <div class="form-group">
+                    <label for="">{{form.data_emprestimo.label}}</label>
+                    {% render_field form.data_emprestimo class="form-control" type="date" %}
+                </div>  
+            </div>
+        {% endif %}        
     </div>
+
 
     <button type="submit" class="btn btn-success">Cadastrar</button>
    
