--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -163,9 +163,23 @@
 </div>
 	<br>
 
+	{{form.data_emprestimo.label}}<br>
+
+	{{object.data_emprestimo}}<br>
+
+	document.{{object.data_emprestimo}}.stepUp(30);<br>
+
+	
+
+	
+
+
+
 	<script>
+		
 		function imprimir(){
-			for (var i = 0 ; i < {{object.qtd_parcelas}}; i++){
+			for (var i = 0 ; i < {{object.qtd_parcelas}}; i++){	
+				
 				if ((i+1)%3 != 0){
 					carne.innerHTML +=
 					`<table cellspacing="0" cellpadding="0" border="1">
@@ -184,7 +198,7 @@
 								<span class="title">Data de Vencimento</span>
 								<br/>
 								<br/>
-								<p class="content right text" style="font-weight:bold;">01/01/2016</p>
+								<p class="content right text" style="font-weight:bold;">{{object.data_emprestimo}}.stepUp(5)</p>
 							</td>
 						</tr>
 						<tr>
@@ -378,7 +392,7 @@
 								<span class="title">Data de Vencimento</span>
 								<br/>
 								<br/>
-								<p class="content right text" style="font-weight:bold;">01/01/2016</p>
+								<p class="content right text" style="font-weight:bold;">{{object.data_emprestimo}}</p>
 							</td>
 						</tr>
 						<tr>
@@ -563,6 +577,7 @@
 					
 					
 				}	
+				
 			}
 		}
 
