--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -42,6 +42,10 @@
                 <th class="text-right">Prestacao</th>
                 <td>{{ object.valor_prestacao }}</td>
             </tr>
+            <tr>
+                <th class="text-right">Data do Empréstimo</th>
+                <td>{{ object.data_emprestimo }}</td>
+            </tr>
             
         </tbody>
     </table>
