--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -70,6 +70,12 @@
         </div>       
         
         {% if object.pk %}
+            <!-- <div class="col-sm-3">
+                <div class="form-group">
+                    <label for="data_emprestimo">Data do emprestimo sem widget</label>
+                    <input class="form-control" id="data_emprestimo" name="data_emprestimo" placeholder="" required> 
+                </div>  
+            </div> -->
             <div class="col-sm-3"> 
                 <div class="form-group">
                     <label for="">{{form.data_emprestimo.label}}</label>
@@ -80,10 +86,11 @@
             <div class="col-sm-3">
                 <div class="form-group">
                     <label for="">{{form.data_emprestimo.label}}</label>
-                    {% render_field form.data_emprestimo class="form-control" type="date" %}
+                    {% render_field form.data_emprestimo class="form-control" %}
                 </div>  
-            </div>
-        {% endif %}        
+            </div>            
+        {% endif %}         
+        
     </div>
 
 
