--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -44,7 +44,8 @@
             </tr>
             <tr>
                 <th class="text-right">Data do Empréstimo</th>
-                <td >{{ object.data_emprestimo }}</td>
+                <td type="form-control">{{ object.data_emprestimo }}</td> 
+                <td >{{ object.data_emprestimo.day }}/{{ object.data_emprestimo.month }}/{{ object.data_emprestimo.year }}</td>                
             </tr>
             
         </tbody>
