--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -45,7 +45,7 @@
         <div class="col-sm-3"> 
             <div class="form-group">
                 <label for="">{{form.cliente.label}}</label>
-                {% render_field form.cliente class="form-control" %}                       
+                {% render_field form.cliente class="form-control" type="text" %}                       
             </div>
         </div>
         <div class="col-sm-3"> 
