--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -20,7 +20,10 @@
             .no-print * {
                 display: none !important;
             }
-        }
+		}
+		.israel {
+			background-color: rgb(167, 32, 32);
+		}
 
         .document {
             margin: auto auto;
@@ -78,7 +81,7 @@
             font-size: 11px;
             font-weight: normal;
         }
-
+        
         .text {
             font-size: 12px;
         }
@@ -178,7 +181,7 @@
 	{{object.data_emprestimo.month }}<br>
 	{{object.data_emprestimo.year }}<br> -->
 
-	<a>Data do teste</a>
+	{% comment %} <a>Data do teste</a>
 	{{object.valor_emprestado}}
 	<div >
 		{% render_field form.data_emprestimo  id="data_emprestimo2" type="date" %} <br>		
@@ -203,9 +206,9 @@
 	<script>
 		var data = moment().today();
 		document.write(`Sua soma foi ${data}`)
-	</script>
+	</script> {% endcomment %}
 
-
+	
 	 
 	
 	<br>
@@ -258,8 +261,10 @@
 			var data_emissao = "{{object.data_emprestimo|date:"d/m/Y"}}"
 			var valor_multa = 999.99
 			var valor_juros_dia = 888.88
-			var contador_parcela = 0
+			var contador_parcela = 0		
 			
+			//VARIÁVEIS DO CLIENTE
+			var cliente_nome = "{{object.cliente}}"
 
 			for (var i = 0 ; i < {{object.qtd_parcelas}}; i++){
 			contador_meses++
@@ -287,55 +292,52 @@
 			if ((i+1)%3 != 0){
 				carne.innerHTML +=
 				`<table cellspacing="0" cellpadding="0" border="1">
+					<!--1º linha-->
 					<tr>
-						<td width="15%" >
+						<td width="15%">
 							<span class="title">Nº Documento</span>
 							<br/>
 							<span class="text">Ver como gerar </span>
 						</td>
-						<td width="70%" colspan="5">
+						<td width="1px"></td>
+						<td width="39%" colspan="5">
 							<span class="title">Local de Pagamento</span>
 							<br/>
-							<span class="text">PREFERENCIALMENTE ATÉ O VALOR LIMITE </span>
+							<span class="text">PREFERENCIALMENTE ATÉ O VALOR LIMITE </span>							
 						</td>
-						<td width="15%">
+						<td width="45%">
 							<span class="title">Vencimento</span>
-							<br/>
-							<br/>
-							<p class="content right text" style="font-weight:bold;">${dia}/${mes}/${ano}</p>
+							<br/>				
+							<p class="content right text">${dia}/${mes}/${ano}</p>
 						</td>
 					</tr>
-					<tr>
-						<td width="15%" >
-							<span class="title">Vencimento</span>
-							<br/>
-							<span class="text">${dia}/${mes}/${ano}</span>
+					<!--2º linha-->
+					<tr>					
+						<td width="15%">
+							<span class="title">Vencimento</span>							
+							<br/>								
+							<p class="content left text">${dia}/${mes}/${ano}</p>							
 						</td>
+						<td width="1px" ></td>
 						<td width="70%" colspan="5">
-							<span class="title">Cedente </span>
+							<span class="title">Cedente</span>	
 							<br/>
-							<table border="0" style="border:none">
-								<tr>
-									<td width="60%"><span class="text">CREDCOOP - COOPERATIVA DE CRÉDITO 2</span></td>									
-								</tr>
-							</table>
-							<br/>
-							
+							<p class="content left text">CREDCOOP - COOPERATIVA DE CRÉDITO 2</span></p>	
 						</td>
 						<td width="30%">
 							<span class="title">Ag/Cod. Cedente</span>
-							<br/>
-							<br/>
-							<p class="content right">3242/453967-2</p>
+							<br/>							
+							<p class="content text right">3242/453967-2</p>							
 						</td>
 					</tr>
-		
+					<!--3º linha-->
 					<tr>
 						<td width="15%">
 							<span class="title">Ag/Cod. Cedente</span>
 							<br/>
 							<p class="content center">3242/453967-2</p>
 						</td>
+						<td width="1px"></td>
 						<td width="17%" colspan="2">
 							<span class="title">Dt. Emissão</span>
 							<br/>
@@ -363,12 +365,17 @@
 							<p class="content right">Ver com josemir</p>
 						</td>
 					</tr>
-		
+					<!--4º linha-->
 					<tr>
 						<td width="15%">
 							<span class="title">Nosso Número</span>
 							<br/>
 							<p class="content center">ver com josemir2</p>
+						</td>
+						<td width="1px">
+							<span class="title"></span>
+							<br/>
+							<p class="content center"></p>
 						</td>
 						<td width="10%">
 							<span class="title">Uso do Banco</span>
@@ -401,7 +408,8 @@
 							<br/>
 							<p class="content right">R$ ${valor_da_parcela}</p>
 						</td>
-					</tr>					
+					</tr>	
+					<!--5º linha-->			
 					<tr>
 					
 						<td width="15%">
@@ -410,84 +418,84 @@
 							<br/>
 							<p class="content right">R$ ${valor_da_parcela}</p>
 						</td>
+						<td width="1px"></td>
 						<td colspan="5" rowspan="4">
 							<span class="titleisrael">Texto de responsabilidade do cedente<br/>
 							MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
 							JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
 							NÃO RECEBER APÓS 30 DIAS DO VENCIMENTO<br/>
 							PARCELA ${contador_parcela}/${aux_qtd_parccela}
-							</span>
-							
-							
-												
+							</span>				
 						</td>
 						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
+							<span class="title">Desconto</span>
 							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
+							<span class="text"> </span>
 						</td>
-					</tr>
+					</tr>	
+					<!--6º linha-->				
 					<tr>
 						<td>
-							<span class="title">(-) Descontos</span>
+							<span class="title">Desconto</span>
 							<br/>
 							<p class="content right">&nbsp;</p>
 						</td>
+						<td width="1px"></td>
 						<td>
-							<span class="title">(-) Descontos</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
-						</td>
-						
-					</tr>
-					<tr>
-						<td>
-							<span class="title">(+) Juros/Multa</span>
-							<br/>
-							<p class="content right">&nbsp;</p>
-						</td>
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<span class="title">(=) Valor Pago</span>
+							<span class="title">Outras Deduc/Abat.</span>
 							<br/>
 							<p class="content right">&nbsp;</p>
 						</td>
 						
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
-							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
-						</td>
 					</tr>
+					<!--7º linha-->
 					<tr>
-						<td width="15%" >
-							<span class="title">Local de Pagamento</span>
+						<td>
+							<span class="title">Outras Deduc/Abat.</span>
 							<br/>
-							<span class="text">ATÉ O VENCIMENTO </span>
+							<p class="content right">&nbsp;</p>
 						</td>
-						<td colspan="7">
-							<table border="0" style="border:none">
-								<tr>
-									<td width="60%"><span class="text"><b>Nome do Pagador: </b> Pagador ABC</span></td>
-									<td><span class="text"><b>CNPJ/CPF: </b> 123.121.001-00</span></td>
-								</tr>
-								<tr>
-									<td><span class="text"><b>Endereço: </b> Avenida Brasil 1234 - Jardim Brasil - São Paulo - SP - 9999999-999</span></td>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><span class="text"><b>Sacador/Avalista: </b> &nbsp;</span></td>
-									<td><span class="text"><b>CNPJ/CPF: </b> &nbsp;</span></td>
-								</tr>
-							</table>
+						<td width="1px"></td>
+						<td width="15%" >
+							<span class="title">Mora/Multa</span>
+							<br/>
+							<span class="text"></span>
 						</td>
 					</tr>
+					<!--8º linha-->
+					<tr>
+						<td>
+							<span class="title">Mora/Multa</span>
+							<br/>
+							<p class="content right">&nbsp;</p>
+						</td>
+						<td width="1px"></td>
+						<td width="15%" >
+							<span class="title">Outros Acres.</span>
+							<br/>
+							<span class="text">&nbsp;</span>
+						</td>
+					</tr>
+					<!--9º linha-->
+					<tr>
+						<td width="15%">
+							<span class="title">Outros Acres.</span>
+							<br/>
+							<span class="text"></span>
+						</td>
+						<td width="1px"></td>
+						<td width="39%" colspan="5">
+							<span class="title">Sacado: </span>
+							<br/>
+							<span class="text">${cliente_nome} </span>							
+						</td>
+						<td width="45%">
+							<span class="title">Vencimento</span>
+							<br/>				
+							<p class="content right text">${dia}/${mes}/${ano}</p>
+						</td>
+					</tr>
+					
 				</table><br>`
 				
 				
@@ -718,7 +726,7 @@
 	
 </html>
 
-dwvk0g3m
+
 
 
 
