--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -23,6 +23,7 @@
                     <th>cliente</th>                    
                     <th>valor_emprestado</th>                    
                     <th>qtd_parcelas</th>  
+                    <th>Data do Emprestimo</th>  
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +36,7 @@
                     <td>{{ object.cliente }}</td>
                     <td>{{ object.valor_emprestado }}</td>
                     <td>{{ object.qtd_parcelas }}</td>  
+                    <td>{{ object.data_emprestimo }}</td>  
                 </tr>
                 {% endfor %}
             </tbody>
