--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -85,7 +85,7 @@
             <div class="col-sm-3"> 
                 <div class="form-group">
                     <label for="">{{form.data_emprestimo.label}}</label>
-                    {% render_field form.data_emprestimo type="date"  %}                       
+                    {% render_field form.data_emprestimo class="form-control"  %}                       
                 </div>
             </div>       
         {% else %}
@@ -99,7 +99,7 @@
             <div class="col-sm-3">
                 <div class="form-group">
                     <label for="">{{form.data_emprestimo.label}}</label>   
-                    {% render_field form.data_emprestimo type="date" %}                  
+                    {% render_field form.data_emprestimo class="form-control" type="date" %}                  
                     <!-- <input type="text" class="vDateField"  placeholder="oi"> -->
                 </div>  
             </div>            
