--- a/projeto/produto/templates/produto_form.html
+++ b/projeto/produto/templates/produto_form.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <style>
-        span.required:after{
+        span.required:before{
             content: "*";
             color: red;
         }
