campos monetários refatorados para decimalfield

--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -175,6 +175,8 @@
 	{{object.data_emprestimo.day }}<br>
 	{{object.data_emprestimo.month }}<br>
 	{{object.data_emprestimo.year }}<br> -->
+
+	{{object.valor_emprestado}}*2
 	
 	<br>
 <!-- -------------------------------------------------------------------------------------------------- -->
@@ -225,13 +227,15 @@
 
 			var data_emissao = "{{object.data_emprestimo|date:"d/m/Y"}}"
 
-			var valor_da_parcela = parseFloat("{{object.valor_emprestado}}");			
+			var valor_da_parcela = parseFloat("{{object.valor_emprestado}}")		
 
-			var valor_multa = (valor_da_parcela*0.02).toFixed(2);
+			var valor_multa = parseFloat((valor_da_parcela*0.020))
+
+			valor_multa = valor_multa.toFixed(2)
 			
-			var valor_juros_dia = (valor_da_parcela*0.0066).toFixed(2);
+			var valor_juros_dia = (valor_da_parcela*0.0066).toFixed(2)
 
-			var contador_parcela = 0		
+			var contador_parcela = 0
 			
 			//VARIÁVEIS DO CLIENTE
 			var cliente_nome = "{{object.cliente}}"
